welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:4: error: '(' expected but '{' found.
} while {
        ^